Updated to Java 11 & Gradle 4.10. Used a few newer java features in places. Renamed "Odds" to "Chance", which seems a more accurate name.